# agent-skill-sdk

./: .gitignore  LICENSE  README.md  app.py  gitignore  index.html  mkdocs.yml  pyproject.toml
agent_skill_sdk/: __init__.py  decorators.py
agent_skill_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agent_skill_sdk/agent/: context.py  core.py  registry.py  runner.py
agent_skill_sdk/cli/: main.py
agent_skill_sdk/config/: settings.py
agent_skill_sdk/greengrass/: adapter.py  recipe.json
agent_skill_sdk/logs/: memory.py
agent_skill_sdk/plugins/: __init__.py  aws_iot_core.py  coap.py  cron.py  file_watcher.py  http.py  mqtt.py  timer.py
agent_skill_sdk/reasoning/: bedrock.py  templates.py
agent_skill_sdk/skills/: __init__.py  automation.py  basic.py  edge_ops.py  hybrid_llm.py  monitoring.py  planning.py
dashboard/: app.py
docs/: advanced_topics.md  cli_dashboard.md  deployment.md  examples.md  getting_started.md  index.md  llm_reasoning.md  memory_tracing.md  triggers.md  writing_skills.md
examples/: bedrock_planner.py  fan_control.py
getting_started/: index.html
llm_reasoning/: index.html
memory_tracing/: index.html
search/: search_index.json
site/: 404.html
site/advanced_topics/: index.html
site/cli_dashboard/: index.html
site/deployment/: index.html
site/examples/: index.html
site/triggers/: index.html
tests/: test_agent_basic.py
writing_skills/: index.html
